Some spacing fixes for pre code

--- a/precompiled/style.scss
+++ b/precompiled/style.scss
@@ -101,11 +101,10 @@ code{
 pre code{
 	white-space: pre;
 	line-height:1.25;
-	float:right;
-	margin:0 2.5%;
+	float:left;
+	margin:0 2.5% 1em;
 	width:90%;
-	padding:1.5rem;
-	margin:1.5rem;
+	padding:1em 2.5%;
 	overflow:auto;
 }
 aside{
@@ -524,10 +523,10 @@ div.gfyitem {
 	ul ul, ol ol, ul ol, ol ul{
 		margin-left: 2.5rem;
 	}
-	pre code{
+	/*pre code{
 		margin-right: 10%;
 		width:70%;
-	}
+	}*/
 	aside{
 		float:left;
 		width:15%;
